# tokusage

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: auth.py  config.py  db.py  main.py  models.py  routes.py  schemas.py  settings.py
backend/tests/: test_submit.py
crates/tokusage-cli/: Cargo.toml
crates/tokusage-cli/src/: claude_hook.rs  config.rs  log_rotate.rs  main.rs  manifest.rs  queue.rs
crates/tokusage-cli/src/commands/: init.rs  login.rs  mod.rs  self_uninstall.rs  self_update.rs  status.rs  submit.rs
crates/tokusage-cli/src/platform/: linux.rs  macos.rs  windows.rs
crates/tokusage-core/: Cargo.toml
crates/tokusage-core/src/: aggregator.rs  lib.rs  model.rs
crates/tokusage-core/src/sources/: claude.rs  codex.rs  cursor.rs  mod.rs
scripts/: install.sh  mock-server.py
