[workspace]
resolver = "2"
members = ["crates/tokusage-core", "crates/tokusage-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["tokusage contributors"]
license = "MIT"
repository = "https://github.com/gd/tokusage"
rust-version = "1.82"

[workspace.dependencies]
tokusage-core = { path = "crates/tokusage-core" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
walkdir = "2"
plist = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
