[package]
name = "tokusage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tokusage"
path = "src/main.rs"

[dependencies]
tokusage-core.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
directories.workspace = true
plist.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
uuid.workspace = true
hostname.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
mockito = "1"
