[package]
name = "tokusage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
walkdir.workspace = true
directories.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
